# melo-tts

./: .gitignore  README.md  bashhistory.txt  clean_trainlist.py  download_model.py  pyproject.toml  requirements.txt  srt.py
melo/: JP_symbol.txt  api.py  attentions.py  bert_debug.py  check_audio_quality.py  clean.py  clean_text_data.py  data_utils.py  download_utils.py  filter_bert_files.py  finetune.py  finetune.sh  fix_language_code.py  fix_train_list.py  fix_train_list_comprehensive.py  fix_validation_list.py  generate_all_bert.py  generate_config.py  infer.py  models.py  open_public_cloudflare.sh  prepare_vtuber_dataset.sh  preprocess_text.py  preprocess_text_multi.py  resample.py  run_preprocessing_nohup.sh  run_test_preprocess.sh  test_sudachi.py  test_tone.py  train.py  train.sh  train_random_port.sh  utils.py
melo/configs/: config.json
melo/style_bert_vits2/: constants.py
melo/style_bert_vits2/nlp/: __init__.py  bert_models.py
melo/style_bert_vits2/nlp/japanese/: bert_feature.py  g2p.py
melo/style_bert_vits2/nlp/japanese/pyopenjtalk_worker/: __init__.py
melo/text/: __init__.py  bert_based_tokenizer.py  cleaner.py  english.py  japanese.py  japanese_bert.py  line_japanese_bert.py  preprocess_text_multi.py  symbols.py  test_cleaner.py
